--- a/css/master.css
+++ b/css/master.css
@@ -61,7 +61,7 @@ header{
   align-items: center;
   width: 100%;
   height: 8vh;
-  z-index: 5;
+  z-index: 1006;
 }
 
 header > a{
@@ -641,6 +641,7 @@ footer p{
 
 .rocket {
   position: fixed;
+  z-index: 1005;
   left: calc(50% - 50px);
   top: calc(50% - 50px);
   transform: rotate(0deg) translate(calc(50vw - 50px), calc(50vh + 50px));
@@ -804,7 +805,8 @@ footer p{
   }
 
   .navigationButtons {
-    bottom: 10vh;
+    position: absolute;
+    bottom: 15px;
   }
 
   #lPrev span{
